[package]
name = "ahc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
num = "0.4.1"
itertools = "0.11.0"
num-integer = "0.1"
superslice = "1.0.0"
cargo-snippet = "0.6.5"
rand = { version = "=0.8.5", features = ["small_rng"] }
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
lazy_static = "1.4.0"
permutohedron = "0.2.4"
